# UniChoose

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  migrations.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-app.yaml
UniChoose/: fixture_loader.py  manage.py  pytest.ini
UniChoose/UniChoose/: asgi.py  settings.py  urls.py  wsgi.py
UniChoose/about/: tests.py  urls.py  views.py
UniChoose/api/: tests.py  urls.py  views.py
UniChoose/api/filters/: distance_filter.py  initial_filter.py  nearest_filter.py  subjects_filter.py
UniChoose/core/: models.py
UniChoose/departments/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
UniChoose/departments/migrations/: 0001_initial.py  0002_delete_accountdepartmentrelations.py  0003_alter_department_entry_score.py  0004_weighteddepartment.py  (+9 more)
UniChoose/fixtures/: address_fixture.json  addresses_fixture_generator.py  addresses_ids.py  fixture_generator.py  fixture_runner.py  region_choice_field_fixture.py  region_choice_gen.py  regions_fixture.py  subjects_attrs.py
UniChoose/homepage/: tests.py  urls.py  views.py
UniChoose/templates/: base.html
UniChoose/tests/: constants.py  fixtures.py  request_and_check.py
UniChoose/universities/: admin.py  models.py  urls.py  validators.py  views.py
UniChoose/users/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
nginx/: nginx.conf
parcer/: data.json  homepage parcer.py  list_of_links.py  parcer.py
(+54 files in other folders)
