[tool.poetry]
name = "unichoose"
version = "0.1.0"
description = ""
authors = ["h4x4d <cleanyboom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.0,<3.3.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
