[tool.poetry]
name = "unichoose"
version = "0.1.0"
description = ""
authors = ["h4x4d <cleanyboom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.0,<3.3.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = ">=5.0.0,<6.0.0"
python-dotenv = "^0.21.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.10.1"
flake8-bugbear = "^22.12.6"
flake8-tidy-imports = "^4.8.0"
pep8-naming = "^0.13.2"
flake8-eradicate = "^1.4.0"
dlint = "^0.13.0"
flake8-print = "^5.0.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
